--- a/Resources/Private/Templates/ToolbarItems/ToolbarItem.html
+++ b/Resources/Private/Templates/ToolbarItems/ToolbarItem.html
@@ -1,6 +1,6 @@
 <html xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers" data-namespace-typo3-fluid="true">
 	<f:render partial="ToolbarItem" arguments="{
-   			title: 'LLL:EXT:multisite_belogin/Resources/Private/Language/backend.xlf:toolbarItems.multisite_belogin',
+   			title: '{f:translate(key: \'LLL:EXT:elevate_to_admin/Resources/Private/Language/locallang.xlf:toolbar.title\')}',
    			icon: '{core:icon(identifier: \'actions-users\', size: \'small\', alternativeMarkupIdentifier: \'inline\')}'
 		}"
 	/>
