--- a/Resources/Private/Templates/ToolbarItems/ToolbarItem.html
+++ b/Resources/Private/Templates/ToolbarItems/ToolbarItem.html
@@ -1,7 +1,11 @@
 <html xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers" data-namespace-typo3-fluid="true">
-	<f:render partial="ToolbarItem" arguments="{
-   			title: '{f:translate(key: \'LLL:EXT:elevate_to_admin/Resources/Private/Language/locallang.xlf:toolbar.title\')}',
-   			icon: '{core:icon(identifier: \'actions-users\', size: \'small\', alternativeMarkupIdentifier: \'inline\')}'
+	<f:be.pageRenderer
+		includeJavaScriptModules="{
+			0: '@liquidlight/elevate-to-admin/ElevateAdmin.js'
 		}"
 	/>
+	<f:render partial="ToolbarItems/ToolbarItem" arguments="{
+		title: 'LLL:EXT:elevate_to_admin/Resources/Private/Language/locallang.xlf:toolbar.title',
+		icon: '{core:icon(identifier: \'actions-users\', size: \'small\', alternativeMarkupIdentifier: \'inline\')}'
+	}" />
 </html>
